SID-2 Mask table formation etc

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -14,7 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys"
+    "import sys\n",
+    "import numpy as np\n",
+    "import datetime"
    ]
   },
   {
@@ -61,8 +63,12 @@
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'                      # Plot dump folder\n",
     "base_dir = '/Users/user/OneDrive-Univ/data/data-JUICE/datasets/'\n",
     "\n",
-    "date='20230712'\n",
-    "date='20240125'"
+    "date='20230526'\n",
+    "#date='20230530'\n",
+    "#date='20230601'\n",
+    "#date='20230712'\n",
+    "#date='20240125'\n",
+    "#date='20240126'"
    ]
   },
   {
@@ -132,11 +138,31 @@
     "    temp_hf_fpga = np.where((hk_hf.temp_hf_fpga < temp_lim[0]) |\n",
     "                            (hk_hf.temp_hf_fpga > temp_lim[1]), np.nan, hk_hf.temp_hf_fpga)\n",
     "\n",
+    "    # ICD\n",
+    "    temp_rwi_ch1_rev = np.where((hk_hf.temp_rwi_ch1_rev < temp_lim[0]) |\n",
+    "                          (hk_hf.temp_rwi_ch1_rev > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch1_rev)\n",
+    "    temp_rwi_ch2_rev = np.where((hk_hf.temp_rwi_ch2_rev < temp_lim[0]) |\n",
+    "                          (hk_hf.temp_rwi_ch2_rev > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch2_rev)\n",
+    "    temp_hf_fpga_rev = np.where((hk_hf.temp_hf_fpga_rev < temp_lim[0]) |\n",
+    "                            (hk_hf.temp_hf_fpga_rev > temp_lim[1]), np.nan, hk_hf.temp_hf_fpga_rev)\n",
+    "\n",
+    "    # onboard\n",
+    "    temp_rwi_ch1_rev2 = np.where((hk_hf.temp_rwi_ch1_rev2 < temp_lim[0]) |\n",
+    "                          (hk_hf.temp_rwi_ch1_rev2 > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch1_rev2)\n",
+    "    temp_rwi_ch2_rev2 = np.where((hk_hf.temp_rwi_ch2_rev2 < temp_lim[0]) |\n",
+    "                          (hk_hf.temp_rwi_ch2_rev2 > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch2_rev2)\n",
+    "    temp_hf_fpga_rev2 = np.where((hk_hf.temp_hf_fpga_rev2 < temp_lim[0]) |\n",
+    "                            (hk_hf.temp_hf_fpga_rev2 > temp_lim[1]), np.nan, hk_hf.temp_hf_fpga_rev2)\n",
+    "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.r', label='HF(FPGA)')\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '-k', label='HF(FPGA) rev')\n",
     "if err_dpu == 0:\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.c', label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '-c', label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, ':k', label='LVPS(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, ':r', label='LP(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, ':g', label='LF(PCB)')\n",
     "\n",
     "ax1.set_ylabel('HF Temperature [degC]')\n",
     "ax1.legend()\n",
@@ -146,7 +172,9 @@
     "if err_hf == 0:\n",
     "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.g', label='RWI CH1')\n",
     "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.b', label='RWI CH2')\n",
-    "    # print(temp_rwi_ch1)\n",
+    "\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '-k', label='RWI CH1 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '-k', label='RWI CH2 rev')\n",
     "ax2.set_ylabel('RWI Temperature [degC]')\n",
     "ax2.legend()\n",
     "\n",
@@ -178,9 +206,32 @@
     "ax5.legend()\n",
     "ax5.set_xlabel('UT')\n",
     "\n",
+    "\"\"\"\n",
+    "E_min = '2023-07-12 09:10:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "E_max = '2023-07-12 09:20:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "xlim=[t_min, t_max]\n",
+    "ax1.set_xlim(xlim)\n",
+    "\"\"\"\n",
+    "\n",
     "#-----------------------------------------------------------------\n",
     "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
     "# fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 10000\n",
+    "print (hk_hf.temp_hf_fpga[t:t+10])\n",
+    "print (hk_hf.temp_hf_fpga_rev[t:t+10])\n",
+    "\n",
+    "print(hk_dpu.lvps_temp[t:t+10])\n",
+    "print(hk_dpu.hf_temp[t:t+10])\n",
+    "print(hk_dpu.lp_temp[t:t+10])\n",
+    "print(hk_dpu.lf_temp[t:t+10])\n"
    ]
   }
  ],
