--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/2/17"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/3/30"
    ]
   },
   {
@@ -56,8 +56,8 @@
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
     "import juice_cdf_lib  as juice_cdf\n",
-    "import juice_sid2_lib as juice_sid2\n",
-    "# import juice_math_lib as juice_math"
+    "import juice_math_lib as juice_math\n",
+    "import juice_sid2_lib as juice_sid2"
    ]
   },
   {
@@ -77,12 +77,12 @@
    "outputs": [],
    "source": [
     "# *** Plot dump ***\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** CAL set ***\n",
     "band_mode = 0                           # [Power]      0: sum      1: /Hz\n",
     "unit_mode = 0                           # [Power]      0: raw      1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "cal_mode = 2                            # [Power]      0: background     1: CAL     2; all\n",
+    "cal_mode = 0                            # [Power]      0: background     1: CAL     2; all\n",
     "\n",
     "# *** Unit set ***\n",
     "f_mode = 1                              # [Frequency]  0: linear   1:log  in frequency\n",
@@ -1071,33 +1071,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db223d85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "# Mask read\n",
-    "n_mask = 19392\n",
-    "mask_list = np.zeros(n_mask * 3)\n",
-    "mask_list = mask_list.reshape(n_mask, 3)\n",
-    "mask_dir = './lib/'\n",
-    "mask_name = 'hf_mask_natural.csv'\n",
-    "mask_file = mask_dir + mask_name\n",
-    "\n",
-    "# mask_natural read\n",
-    "with open(mask_file, 'r') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    i = 0\n",
-    "    for row in reader:\n",
-    "        mask_list[i, 0] = row[1];  mask_list[i, 1] = row[2];  mask_list[i, 2] = row[3]\n",
-    "        i = i+1\n",
-    "print(\"mask_natural read: \", mask_list.shape, mask_file)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8c6aa899",
    "metadata": {},
    "outputs": [],
@@ -1269,9 +1242,6 @@
     "# Label\n",
     "ax1.set_ylabel(power_str); ax2.set_ylabel(power_str); ax3.set_ylabel(power_str); ax4.set_ylabel(power_str); ax5.set_ylabel(power_str)\n",
     "ax6.set_ylabel(power_str); ax7.set_ylabel(power_str); ax8.set_ylabel(power_str); ax9.set_ylabel(power_str)\n",
-    "# Label\n",
-    "ax1.set_ylabel('EE '+power_str);   ax2.set_ylabel('EuEu '+power_str); ax3.set_ylabel('EvEv '+power_str); \n",
-    "ax4.set_ylabel('EwEw '+power_str); ax4.set_xlabel('Frequency [kHz]')\n",
     "ax9.set_xlabel('Frequency [kHz]')\n",
     "#\n",
     "date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime(f'1st {n_sweep1}: %Y/%m/%d %R:%S   ')\n",
@@ -1413,6 +1383,8 @@
     "spec_sid_EE_msk_med  = np.zeros((n_time0, n_freq1_sid))\n",
     "spec_sid_EE_mean     = np.zeros((n_time0, n_freq1_sid))\n",
     "spec_sid_EE_msk_mean = np.zeros((n_time0, n_freq1_sid))\n",
+    "spec_sid_count       = np.zeros((n_time0, n_freq1_sid))\n",
+    "spec_sid_count_msk   = np.zeros((n_time0, n_freq1_sid))\n",
     "#print(spec.EE.shape, n_time0, n_freq1)\n",
     "#print(spec_msk.EE.shape, n_time0, n_freq1_msk, spec.EE.shape, spec_msk.EE.shape, n_freq1, n_freq1_msk)\n",
     "\n",
@@ -1427,9 +1399,11 @@
     "        spec_sid_EE_msk_med[i][j]  = np.median(spec_msk.EE[i][j0_msk:j1_msk+1])\n",
     "        spec_sid_EE_mean[i][j]     = np.mean(spec.EE[i][j0:j1+1])\n",
     "        spec_sid_EE_msk_mean[i][j] = np.mean(spec_msk.EE[i][j0_msk:j1_msk+1])\n",
-    "        if i==1 and j>100:\n",
-    "            print('{:3d}'.format(j), '{:.2e}'.format(freq_1d_sid[j]), '{:4d}'.format(j0), '{:4d}'.format(j1), '{:2d}'.format(j2), '{:.2e}'.format(spec_sid_EE[i][j]), '{:.2e}'.format(spec_sid_EE_med[i][j]), '{:.2e}'.format(spec_sid_EE_mean[i][j]))\n",
-    "            print('{:3d}'.format(j), '{:.2e}'.format(freq_1d_sid[j]), '{:4d}'.format(j0_msk), '{:4d}'.format(j1_msk), '{:2d}'.format(j2_msk), '{:.2e}'.format(spec_sid_EE_msk[i][j]), '{:.2e}'.format(spec_sid_EE_msk_med[i][j]), '{:.2e}'.format(spec_sid_EE_msk_mean[i][j]))\n",
+    "        spec_sid_count[i][j]       = j1-j0+1\n",
+    "        spec_sid_count_msk[i][j]   = j1_msk-j0_msk*1\n",
+    "        # if i==1: # and j>21:\n",
+    "        #    print('{:3d}'.format(j), '{:.2e}'.format(freq_1d_sid[j]), '{:4d}'.format(j0), '{:4d}'.format(j1), '{:2d}'.format(j2), '{:.2e}'.format(spec_sid_EE[i][j]), '{:.2e}'.format(spec_sid_EE_med[i][j]), '{:.2e}'.format(spec_sid_EE_mean[i][j]))\n",
+    "        #    print('{:3d}'.format(j), '{:.2e}'.format(freq_1d_sid[j]), '{:4d}'.format(j0_msk), '{:4d}'.format(j1_msk), '{:2d}'.format(j2_msk), '{:.2e}'.format(spec_sid_EE_msk[i][j]), '{:.2e}'.format(spec_sid_EE_msk_med[i][j]), '{:.2e}'.format(spec_sid_EE_msk_mean[i][j]))\n",
     "\n",
     "EE_sid_2d      = spec_sid_EE.transpose();       EE_sid_2d_msk      = spec_sid_EE_msk.transpose()\n",
     "EE_sid_2d_med  = spec_sid_EE_med.transpose();   EE_sid_2d_msk_med  = spec_sid_EE_msk_med.transpose()\n",
@@ -1444,6 +1418,20 @@
     "        writer.writerow([ i, f_min, f_max, tbl_freq_to_sid[i, 0], tbl_freq_to_sid[i, 1], tbl_freq_to_sid[i, 2], tbl_freq_to_sid_msk[i, 0], tbl_freq_to_sid_msk[i, 1], tbl_freq_to_sid_msk[i, 2] ])\n",
     "print(\"sample write: \", mask_list.shape, mask_file)\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0085138d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(freq_1d_sid[0:20])\n",
+    "print(spec_sid_EE[0][0:20])\n",
+    "print(spec_sid_EE_msk[0][0:20])\n",
+    "\n",
+    "f_mode = 1"
    ]
   },
   {
@@ -1623,6 +1611,7 @@
     "p_min = p_min0;  p_max = p_max0+1\n",
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
+    "f_min = 80;      f_max = 45000\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "#   f_min = 3900;        f_max = 5100;        print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
@@ -1692,6 +1681,115 @@
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-sid3emu-log_med.png'\n",
     "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1152e711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Median formation\n",
+    "EE_count = np.median(spec_sid_count, axis=0)\n",
+    "EE_count_msk = np.median(spec_sid_count_msk, axis=0)\n",
+    "EE_ratio = (np.median(spec_sid_count_msk, axis=0) / np.median(spec_sid_count, axis=0)) * 1000\n",
+    "EE_sid = np.median(spec_sid_EE, axis=0)  / EE_count\n",
+    "EE_sid_msk = np.median(spec_sid_EE_msk, axis=0) / EE_count_msk\n",
+    "EE_sid_mean = np.median(spec_sid_EE_msk_mean, axis=0); \n",
+    "\n",
+    "# Y-range\n",
+    "p_min = p_min0+1;   p_max = p_max0-3\n",
+    "# X-range\n",
+    "f_min = 0;  f_max = 5000\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 40))\n",
+    "ax1 = fig.add_subplot(9, 1, 1);  ax2 = fig.add_subplot(9, 1, 2);  ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
+    "ax5 = fig.add_subplot(9, 1, 5);  ax6 = fig.add_subplot(9, 1, 6);  ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8)\n",
+    "ax9 = fig.add_subplot(9, 1, 9)\n",
+    "\n",
+    "ax1.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax1.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax2.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax2.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax3.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax3.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax4.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax4.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax5.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax5.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax6.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax6.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax7.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax7.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax8.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax8.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax9.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave'); ax9.plot(freq_1d_msk, EE_msk, '-r', linewidth=.5, label='EE mask')\n",
+    "ax1.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax1.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax1.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax2.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax2.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax2.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax3.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax3.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax3.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax4.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax4.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax4.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax5.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax5.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax5.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax6.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax6.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax6.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax7.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax7.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax7.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax8.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax8.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax8.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "ax9.plot(freq_1d_sid, EE_sid, '-g', linewidth=1, label='EE ave');  ax9.plot(freq_1d_sid, EE_sid_msk, '-b', linewidth=1, label='EE mask');  ax9.plot(freq_1d_sid, EE_sid_mean, '-r', linewidth=3, label='EE mean')\n",
+    "\n",
+    "ax1.set_yscale('log');  ax2.set_yscale('log');  ax3.set_yscale('log');  ax4.set_yscale('log');  ax5.set_yscale('log')\n",
+    "ax6.set_yscale('log');  ax7.set_yscale('log');  ax8.set_yscale('log');  ax9.set_yscale('log')\n",
+    "\n",
+    "# Mask - ratio\n",
+    "ax1.plot(freq_1d_sid, EE_ratio, '.b', label='ratio'); ax2.plot(freq_1d_sid, EE_ratio, '.b', label='ratio') \n",
+    "ax3.plot(freq_1d_sid, EE_ratio, '.b', label='ratio'); ax4.plot(freq_1d_sid, EE_ratio, '.b', label='ratio') \n",
+    "ax5.plot(freq_1d_sid, EE_ratio, '.b', label='ratio'); ax6.plot(freq_1d_sid, EE_ratio, '.b', label='ratio')\n",
+    "ax7.plot(freq_1d_sid, EE_ratio, '.b', label='ratio'); ax8.plot(freq_1d_sid, EE_ratio, '.b', label='ratio');  ax9.plot(freq_1d_sid, EE_ratio, '.b', label='ratio')\n",
+    "ax1.plot(freq_1d_sid, EE_count*10, '.r', label='ratio'); ax2.plot(freq_1d_sid, EE_count*10, '.r', label='ratio') \n",
+    "ax3.plot(freq_1d_sid, EE_count*10, '.r', label='ratio'); ax4.plot(freq_1d_sid, EE_count*10, '.r', label='ratio') \n",
+    "ax5.plot(freq_1d_sid, EE_count*10, '.r', label='ratio'); ax6.plot(freq_1d_sid, EE_count*10, '.r', label='ratio')\n",
+    "ax7.plot(freq_1d_sid, EE_count*10, '.r', label='ratio'); ax8.plot(freq_1d_sid, EE_count*10, '.r', label='ratio');  ax9.plot(freq_1d_sid, EE_count*10, '.r', label='ratio')\n",
+    "\n",
+    "# Mask - natural\n",
+    "ax1.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask'); ax2.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask')\n",
+    "ax3.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask'); ax4.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask')\n",
+    "ax5.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask'); ax6.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask')\n",
+    "ax7.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask'); ax8.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask')\n",
+    "ax9.plot(mask_list[:,0], mask_list[:,2]*15, '.k', label='mask')\n",
+    "\n",
+    "# Label\n",
+    "ax1.set_ylabel(power_str); ax2.set_ylabel(power_str); ax3.set_ylabel(power_str); ax4.set_ylabel(power_str); ax5.set_ylabel(power_str)\n",
+    "ax6.set_ylabel(power_str); ax7.set_ylabel(power_str); ax8.set_ylabel(power_str); ax9.set_ylabel(power_str)\n",
+    "ax9.set_xlabel('Frequency [kHz]')\n",
+    "#\n",
+    "date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime(f'1st {n_sweep1}: %Y/%m/%d %R:%S   ')\n",
+    "date2 = Epoch_1d[n_sweep2];  date2 = date2.strftime(f'Mid {n_sweep2}: %Y/%m/%d %R:%S   ')\n",
+    "date3 = Epoch_1d[n_sweep3];  date3 = date3.strftime(f'Fin {n_sweep3}: %Y/%m/%d %R:%S')\n",
+    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
+    "ax1.set_title(title_date)\n",
+    "\n",
+    "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
+    "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
+    "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);  ax9.legend(loc='upper right', fontsize=8)\n",
+    "\n",
+    "# range: X-axis\n",
+    "xlim=[f_min,       f_max];        ax1.set_xlim(xlim); \n",
+    "xlim=[f_min+5000,  f_max+5000];   ax2.set_xlim(xlim);  \n",
+    "xlim=[f_min+10000, f_max+10000];  ax3.set_xlim(xlim); \n",
+    "xlim=[f_min+15000, f_max+15000];  ax4.set_xlim(xlim)\n",
+    "xlim=[f_min+20000, f_max+20000];  ax5.set_xlim(xlim)\n",
+    "xlim=[f_min+25000, f_max+25000];  ax6.set_xlim(xlim)\n",
+    "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim)\n",
+    "xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
+    "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
+    "\n",
+    "# range: Y-axis\n",
+    "print(p_min, p_max)\n",
+    "ylim=[10**p_min, 10**p_max]\n",
+    "# ylim=[1, 50]\n",
+    "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
+    "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "\n",
+    "# Plot\n",
+    "fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_w-msk.png'\n",
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "\n",
+    "print(EE_count_msk)"
    ]
   },
   {
