--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -74,7 +74,7 @@
     "# *** Mode set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
+    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
     "time_mode = 1                           # 0: Epoch    1: data number\n",
@@ -82,7 +82,7 @@
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
-    "p_raw_min = 3.5                         # background: 2.5   CAL: 5\n",
+    "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
@@ -149,11 +149,11 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -228,6 +228,7 @@
    "outputs": [],
    "source": [
     "# *** Prelaunch - Ver.1 ***\n",
+    "\"\"\"\n",
     "# *** 202105\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202105/'        # CDF data folder\n",
     "data_name_list = ['SID3_20210531_SCPFM_PTR_RPWI_2_day4_xid32813.cdf']\n",
@@ -268,7 +269,6 @@
     "                  'SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32804.cdf',\n",
     "                 ] \n",
     "                \n",
-    "\"\"\"\n",
     "# *** 202211 ***\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202211/'        # CDF data folder\n",
     "data_name_list = ['SID3_20221115_Mission_Test_GCO500_1RPR_4.cdf',\n",
@@ -445,7 +445,9 @@
     "f_min0 = freq_1d[0]\n",
     "f_max0 = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)"
+    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)\n",
+    "\n",
+    "# print(freq1); print(freq_width1)"
    ]
   },
   {
@@ -587,6 +589,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25621355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(data.epoch)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "dccd566c",
@@ -608,15 +620,15 @@
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
-    "    f_min = f_min0;  f_max = 5000\n",
+    "    f_min = f_min0;  f_max = 2068   # as same as SID-4/20\n",
     "\n",
     "if data.complex[0] == 0:    # power\n",
     "    fig = plt.figure(figsize=(12, 4))\n",
     "    ax1 = fig.add_subplot(1, 1, 1)\n",
     "else:                      # matrix\n",
     "    fig = plt.figure(figsize=(12, 12))\n",
-    "    ax1 = fig.add_subplot(6, 1, 1);  ax5 = fig.add_subplot(6, 1, 4);  ax6 = fig.add_subplot(6, 1, 5);  ax7 = fig.add_subplot(6, 1, 6)\n",
-    "    ax3 = fig.add_subplot(6, 1, 2);  ax4 = fig.add_subplot(6, 1, 3)\n",
+    "    ax1 = fig.add_subplot(4, 1, 1);  ax5 = fig.add_subplot(4, 1, 2);  ax6 = fig.add_subplot(4, 1, 3);  ax7 = fig.add_subplot(4, 1, 4)\n",
+    "    # ax3 = fig.add_subplot(6, 1, 2);  ax4 = fig.add_subplot(6, 1, 3)\n",
     " \n",
     "ax1.plot(freq1, data.EuEu[n0], ':r', linewidth=1.0, label='uu init')\n",
     "ax1.plot(freq1, data.EvEv[n0], ':g', linewidth=0.8, label='vv init')\n",
@@ -632,6 +644,7 @@
     "    ax1.set_xscale('log')\n",
     "#\n",
     "if data.complex[0] > 0:    # Matrix\n",
+    "    \"\"\"\n",
     "    ax3.plot(freq1, data.EuEv_re[n0], ':r', linewidth=1.0, label='uv_re half')\n",
     "    ax3.plot(freq1, data.EvEw_re[n0], ':g', linewidth=0.8, label='vw_re half')\n",
     "    ax3.plot(freq1, data.EwEu_re[n0], ':b', linewidth=0.6, label='wu_re half')\n",
@@ -651,6 +664,7 @@
     "    ax4.plot(freq1, data.E_DoPuv[n2], '-r', linewidth=1.2,  label='uv end')\n",
     "    ax4.plot(freq1, data.E_DoPvw[n2], '-g', linewidth=1.0,  label='vw end')\n",
     "    ax4.plot(freq1, data.E_DoPwu[n2], '-b', linewidth=0.8,  label='wu end')\n",
+    "    \"\"\"\n",
     "    #\n",
     "    ax5.plot(freq1, data.E_DoLuv[n0], ':r', linewidth=1.0, label='uv init')\n",
     "    ax5.plot(freq1, data.E_DoLvw[n0], ':g', linewidth=0.8, label='vw init')\n",
@@ -707,6 +721,7 @@
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
     "# range: Y-axis\n",
+    "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ylim=[-0.05, 1.05]; ax5.set_ylim(ylim);  ax4.set_ylim(ylim); \n",
     "    ylim=[-1.05, 1.05]; ax6.set_ylim(ylim)\n",
