--- a/JUICE-Orbit.ipynb
+++ b/JUICE-Orbit.ipynb
@@ -18,7 +18,8 @@
     "import matplotlib.pyplot as plt\n",
     "import spiceypy as spice\n",
     "from astropy.constants import au\n",
-    "# from matplotlib import patches"
+    "from matplotlib import patches\n",
+    "from datetime import datetime\n"
    ]
   },
   {
@@ -71,7 +72,9 @@
     "spice_dir = '/Users/user/OneDrive-Univ/data/data-JUICE/spice/juice/kernels/'\n",
     "\n",
     "juice_spice.spice_ini(spice_dir)\n",
-    "# juice_spice.spice_predict_ini(spice_dir)"
+    "# juice_spice.spice_predict_ini(spice_dir)\n",
+    "\n",
+    "save_folder_path = \"/Users/user/0-python/JUICE_python/ql/\""
    ]
   },
   {
