--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -79,7 +79,7 @@
     "# *** Mode set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
+    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
     "time_mode = 0                           # 0: Epoch    1: data number\n",
@@ -348,7 +348,9 @@
     "f_min0 = freq_1d[0]\n",
     "f_max0 = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])"
+    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])\n",
+    "\n",
+    "# print(freq1); print(freq_width1)"
    ]
   },
   {
@@ -573,7 +575,7 @@
     "xlim=[f_min, f_max]\n",
     "ax1.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); # ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
     "# range: Y-axis\n",
-    "# ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
+    "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ylim=[-0.05, 1.05]; ax5.set_ylim(ylim);  # ax4.set_ylim(ylim); \n",
     "    ylim=[-1.05, 1.05]; ax6.set_ylim(ylim)\n",
